# Jukebox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  House 20 minutes.cue  House20min.cue  LICENSE  Makefile  PHASE2_COMPLETE.md  PROGRESS.md  QUICKSTART.md  README.md  STATS_TO_LEARN.md  SpaceTrip.cue  TODO.md  TRACKS.md  VJ-EFFECTS-STATUS.md  VJ-effects.md  cuesheet.txt  emetteur.md  eror.txt  features.md  pyproject.toml  tech-stack-by-chatgpt.md  tech-stack-recommendation copy.md  tech-stack-recommendation.md  test_cache_check.py  test_chunked_match.py  test_match_diag.py  test_mix_diag.py  test_segment_match.py  update.sh  vjing_mappings.md
.claude/agents/: tech-stack-advisor.md
.claude/state/: delegation_violations.json  last_turn_duration.txt  turn_durations.json  turn_start_timestamp.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
.serena/: project.yml
.serena/memories/: architecture_patterns.md  code_style_and_conventions.md  codebase_structure.md  plugin_settings_pattern.md  project_overview.md  suggested_commands.md  task_completion_checklist.md  vjing_effects_roadmap.md
Roadmap/: 00-OVERVIEW.md  01-MVP-FOUNDATION.md  02-CI-CD-SETUP.md  03-TESTING-QUALITY.md  04-CORE-FEATURES.md  05-PLUGIN-SYSTEM.md  06-ESSENTIAL-MODULES.md  07-ADVANCED-FEATURES.md  08-DISTRIBUTION-RELEASE.md
config/: config.yaml
docs/: DEVELOPMENT.md  engine_dj_mapping.md  milkdrop_integration_report.md
jukebox/: main.py
jukebox/core/: audio_player.py  batch_processor.py  config.py  constants.py  database.py  duplicate_checker.py  event_bus.py  mode_manager.py  playback_controller.py  plugin_manager.py  protocols.py  repositories.py  settings_sync_mixin.py  shortcut_manager.py  shortcut_mixin.py
jukebox/ui/: main_window.py  theme_manager.py  ui_builder.py
jukebox/utils/: audio_features.py  batch_helper.py  logger.py  metadata.py  scanner.py  tag_writer.py  waveform_serializer.py
ml/: README.md  __init__.py
ml/genre_classifier/: __init__.py  __main__.py  cli.py  data_loader.py  feature_engineering.py  models.py  trainer.py
ml/models/: svm.pkl  xgb.pkl
plugins/: README_directory_navigator.md  README_genre_filter.md  audio_analyzer.py  conf_manager.py  directory_navigator.py  duplicate_finder.py  engine_dj_export.py  file_curator.py  file_manager.py  genre_editor.py  genre_filter.py  genre_suggester.py  loop_player.py  metadata_editor.py  mode_switcher.py  playback_navigation.py  playlist_dialog.py  playlist_manager.py  playlists_plugin.py  recommendations.py  search_and_filter.py  stats_plugin.py  status_bar.py  theme_switcher.py  todo.md  track_info.py  waveform_visualizer.py
plugins/cue_maker/: README.md  __init__.py  analyzer.py  cache.py  constants.py  exporter.py  model.py  plugin.py  table_model.py
plugins/video_exporter/: __init__.py  export_dialog.py  export_worker.py  plugin.py
scripts/: analyze.sh  batch_audio_analysis.py  diagnose_match.py  setup.sh
shazamix/: README.md  __init__.py  __main__.py  cli.py  database.py  fingerprint.py  matcher.py
tests/: conftest.py  pytest_vlc_mock.py
tests/core/: test_config.py  (+8 more)
tools/: show_tags.py
vj/: test_esp32_send.py  vjing_playground.py
(+62 files in other folders)
