[project]
name = "jukebox"
version = "0.1.0"
description = "Modular audio jukebox application"
authors = [{name = "Jukebox Team", email = "jukebox@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "python-vlc>=3.0.0",
    "mutagen>=1.47.0",
    "PyYAML>=6.0",
    "pydantic>=2.5.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pyqtgraph>=0.13.0",
    "scipy>=1.11.0",
    "femtologger>=0.1.0",
    "pyrubberband>=0.4.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]
ml-xgboost = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "xgboost>=2.0.0",
]
video = [
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",  # Optional, for video background layer
    "noise>=1.2.2",  # Perlin/Simplex noise for VJing effects
    "moderngl>=5.8.0",  # GPU shaders for heavy VJing effects
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
jukebox = "jukebox.main:main"
genre-classifier = "ml.genre_classifier.cli:main"
shazamix = "shazamix.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "SIM105",  # contextlib.suppress (prefer explicit try-except)
]

[tool.ruff.lint.per-file-ignores]
"jukebox/ui/components/track_list.py" = ["N802"]
"plugins/cue_maker/table_model.py" = ["N802"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "vlc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mutagen.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jukebox --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["jukebox"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
fail_under = 50
